fix moi thu
