# app/api/controllers/v1/HomeController.php
@@ -30,22 +30,19 @@ class HomeController
     {
         try {
             $latestLimit = isset($_GET['latest_limit']) ? (int)$_GET['latest_limit'] : 8;
-            $maleLimit = isset($_GET['male_limit']) ? (int)$_GET['male_limit'] : 4;
-            $femaleLimit = isset($_GET['female_limit']) ? (int)$_GET['female_limit'] : 4;
+            $featuredLimit = isset($_GET['featured_limit']) ? (int)$_GET['featured_limit'] : 8;
+            $topLimit = isset($_GET['top_limit']) ? (int)$_GET['top_limit'] : 8;
             $postsLimit = isset($_GET['posts_limit']) ? (int)$_GET['posts_limit'] : 4;
 
-            $maleCategorySlug = isset($_GET['male_category']) ? $_GET['male_category'] : 'dong-ho-nam';
-            $femaleCategorySlug = isset($_GET['female_category']) ? $_GET['female_category'] : 'dong-ho-nu';
-
             $latestProducts = $this->productModel->getLatest($latestLimit);
-            $maleProducts = $this->productModel->getByCategorySlug($maleCategorySlug, $maleLimit);
-            $femaleProducts = $this->productModel->getByCategorySlug($femaleCategorySlug, $femaleLimit);
+            $featuredProducts = $this->productModel->getFeatured($featuredLimit);
+            $topProducts = $this->productModel->getTopProducts($topLimit);
             $posts = $this->postModel->getAll($postsLimit);
 
             $this->response->json([
                 'latest_products' => $latestProducts,
-                'male_products' => $maleProducts,
-                'female_products' => $femaleProducts,
+                'featured_products' => $featuredProducts,
+                'top_products' => $topProducts,
                 'posts' => $posts
             ], 200);
         } catch (Exception $e) {
